# 1nitetent

./: AGENTS.md  CHANGELOG.md  Cargo.toml
.claude-plugin/: marketplace.json  plugin.json  settings.json
.github/workflows/: ci.yaml  release.yaml
hooks/: ensure-binary.sh  hooks.json  nudge-skill.sh
skills/1nitetent/: SKILL.md
src/: cache.rs  geocode.rs  main.rs  output.rs  spot.rs
src/commands/: list.rs  mod.rs  near.rs  refresh.rs  search.rs  spot.rs  version.rs
